# AstragaramLibs

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
.github/: version_update.py
.github/workflows/: ConanBuildTest.yml  ConanBuildTestLinux.yml  ConanBuildTestWindows.yml  ConanCreate.yml  main.yml
FileDirUtils/GTest/: test_FileDirUtils.cpp
FileDirUtils/Src/: FileDirUtils.cpp  FileDirUtils.h
GTest/: sum.h  test.cpp
GoogleProtocolBuffers/GTest/: test_ProtobufHelper.cpp
GoogleProtocolBuffers/GTest/ProtosFiles/: person.proto
IPC/: simple_client_main.cpp  simple_server_main.cpp
IPC/GTest/: test_Socket.cpp
IPC/Src/: ClientSocket.cpp  ClientSocket.h  ServerSocket.cpp  ServerSocket.h  Socket.cpp  Socket.h  SocketException.h
Logger/: Logger.cpp
Logger/Src/: Logger.cpp  Logger.h
Logger/Test/: TestLogger.cpp
Logger/include/: Logger.h
MiscUtils/: MiscUtils.cpp
NetworkUtils/Example/: ExampleNetworkUtils.cpp
NetworkUtils/GTest/: test_NetworkUtils.cpp
NetworkUtils/Src/: NetworkUtils.cpp  NetworkUtils.h
ProtoFiles/: NetworkInterface.proto
StringUtils/GTest/: test_StringUtils.cpp
StringUtils/Src/: StringUtils.cpp  StringUtils.h
ThreadManager/: example_thread.cpp
ThreadManager/GTest/: test_ThreadManager.cpp
ThreadManager/Src/: ThreadManager.cpp  ThreadManager.h
test/: sum.h  test.cpp
